Fix footer visibility on club profile

--- a/static/css/club_profile.css
+++ b/static/css/club_profile.css
@@ -174,6 +174,11 @@ textarea.form-control {
   padding-top: 1rem;
 }
 
+.review-user-container {
+  position: absolute;
+  bottom: 0;
+}
+
 .review-avatar {
   min-width: 35px;
    min-height: 35px;
